Fix deployment: Add Maven wrapper and production configuration for Render deployment
- Add Maven wrapper files (mvnw, mvnw.cmd, .mvn directory)
- Create application-prod.properties for production environment
- Update application.properties to use environment variables
- Add .dockerignore for optimized Docker builds
- Update Dockerfile to use production profile
- Update RENDER_DEPLOYMENT.md with latest fixes and troubleshooting
- Fix database connection and CORS configuration for production

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -24,5 +24,5 @@ RUN ./mvnw clean install -DskipTests
 # Expose the port the app runs on
 EXPOSE 8080
 
-# Set the command to run the application
-CMD ["java", "-jar", "target/backend-0.0.1-SNAPSHOT.jar"] 
+# Set the command to run the application with production profile
+CMD ["java", "-jar", "target/backend-0.0.1-SNAPSHOT.jar", "--spring.profiles.active=prod"] 
