--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,24 +1,24 @@
 # Server Configuration
-server.port=8080
+server.port=${PORT:8080}
 
 # PostgreSQL Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/evdb
-spring.datasource.username=postgreuser
-spring.datasource.password=adiman05
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/evdb}
+spring.datasource.username=${DATABASE_USERNAME:postgreuser}
+spring.datasource.password=${DATABASE_PASSWORD:adiman05}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=${SHOW_SQL:false}
+spring.jpa.properties.hibernate.format_sql=${FORMAT_SQL:false}
 
 # Logging
-logging.level.com.evcommerce.backend=DEBUG
-logging.level.org.springframework.web=DEBUG
+logging.level.com.evcommerce.backend=${LOG_LEVEL:INFO}
+logging.level.org.springframework.web=${LOG_LEVEL:INFO}
 
 # CORS Configuration
-spring.web.cors.allowed-origins=http://localhost:3000
+spring.web.cors.allowed-origins=${CORS_ORIGINS:http://localhost:3000}
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
 
