Add debugging: Enhanced logging and health check endpoints to troubleshoot deployment issues

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -15,8 +15,10 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
 # Logging
-logging.level.com.evcommerce.backend=INFO
-logging.level.org.springframework.web=INFO
+logging.level.com.evcommerce.backend=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.boot.autoconfigure=DEBUG
+logging.level.com.zaxxer.hikari=DEBUG
 
 # CORS Configuration (allow all origins for production)
 spring.web.cors.allowed-origins=*
