Add startup debugging: Create startup script and simplify DatabaseConfig to troubleshoot application crashes

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -18,11 +18,17 @@ RUN ./mvnw dependency:go-offline -B
 # Copy the source code
 COPY src src
 
+# Copy startup script
+COPY start.sh .
+
 # Build the application
 RUN ./mvnw clean install -DskipTests
+
+# Make startup script executable
+RUN chmod +x start.sh
 
 # Expose the port the app runs on
 EXPOSE 8080
 
-# Set the command to run the application with production profile
-CMD ["java", "-jar", "target/backend-0.0.1-SNAPSHOT.jar", "--spring.profiles.active=prod"] 
+# Set the command to run the application with startup script
+CMD ["./start.sh"] 
