Fix database connection for Render.com: parse DATABASE_URL and add SSL support

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -2,10 +2,15 @@
 server.port=${PORT:8080}
 
 # PostgreSQL Database Configuration (using environment variables)
+# Handle both Render.com DATABASE_URL and individual components
 spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/evdb}
 spring.datasource.username=${DB_USERNAME:postgreuser}
 spring.datasource.password=${DB_PASSWORD:adiman05}
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+# SSL Configuration for Render.com PostgreSQL
+spring.datasource.hikari.ssl=true
+spring.datasource.hikari.sslmode=require
 
 # JPA Configuration
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
