--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -32,7 +32,7 @@ logging.level.org.hibernate.SQL=false
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=false
 
 # CORS Configuration (allow all origins for production)
-spring.web.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:https://ev-frontend.onrender.com,https://four413-project-group-d-6.onrender.com}
+spring.web.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:https://four413-project-group-d-7.onrender.com,https://ev-frontend.onrender.com,https://four413-project-group-d-6.onrender.com}
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
 
